--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -14,6 +14,8 @@
 % one is created to set any modules keys, and one specific to the module 
 % used here.
 \ExplSyntaxOn
+\edef\test{\keys_get_variable_scope:N\l_tmp_clist}\show\test
+
 
 \DeclareDocumentCommand{\SetModuleKeys}{m}{
   \keys_manage:n{
@@ -185,7 +187,7 @@
 \endgroup
 \temp\\
 
-% Test eight: An expanded version of .tkp_set:N is available.
+% Test eight: An expanded version of .tl_set:N is available.
 % ----------------------------------------------------------------------
 %   Unexpanded
 %   Expanded
