--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -14,8 +14,6 @@
 % one is created to set any modules keys, and one specific to the module 
 % used here.
 \ExplSyntaxOn
-\edef\test{\keys_get_variable_scope:N\l_tmp_clist}\show\test
-
 
 \DeclareDocumentCommand{\SetModuleKeys}{m}{
   \keys_manage:n{
@@ -30,6 +28,8 @@
 \ExplSyntaxOff
 
 \begin{document}
+
+\ExplSyntaxNamesOn
 
 % Each test starts with a short piece of text explaining the property
 % being used. Under this, the expected output is given, followed
@@ -157,78 +157,57 @@
   key
 }
 
-% Test seven: Keys can be created to store data tl variable both 
-% locally and globally.
+% Test seven: Keys can be created to store data both locally and 
+% globally. This is illustrated using token list variables.
 % ----------------------------------------------------------------------
 %   Some content
+%   Outside
 %   Outside
 %   Some content
 %   Some content
 % ----------------------------------------------------------------------
-\renewcommand*{\temp}{Outside}
+\tl_new:Nn \l_temp_tl {Outside}
+\tl_new:Nn \g_temp_tl {Outside}
 \SetModuleKeys{
-  key one/.tl_set:N = \temp,
+  key one/.set:N = \l_temp_tl,
 }
 \begingroup
 \SetModuleKeys{
   key = Some content
 }
-\temp\\
+\l_temp_tl\\
 \endgroup
-\temp\\
+\l_temp_tl\\
 \SetModuleKeys{
-  key/.tl_gset:N = \temp
+  key/.set:N = \g_temp_tl
 }
 \begingroup
 \SetModuleKeys{
   key = Some content
 }
-\temp\\
+\g_temp_tl\\
 \endgroup
-\temp\\
+\g_temp_tl\\
 
-% Test eight: An expanded version of .tl_set:N is available.
+% Test eight: An expanded version of .set:N is available.
 % ----------------------------------------------------------------------
 %   Unexpanded
 %   Expanded
 % ----------------------------------------------------------------------
-\renewcommand*{\temp}{Expanded}
-\newcommand*{\tempa}{}
-\newcommand*{\tempb}{}
+\tl_set:Nn \l_temp_tl {Expanded}
+\tl_new:N \l_tempa_tl 
+\tl_new:N \l_tempb_tl 
 \SetModuleKeys{
-  key one/.tl_set:N   = \tempa,
-  key two/.tl_set_x:N = \tempb,
-  key one = \temp,
-  key two = \temp,
+  key one/.set:N   = \l_tempa_tl,
+  key two/.set_x:N = \l_tempb_tl,
+  key one = \l_temp_tl,
+  key two = \l_temp_tl,
 }
-\renewcommand*{\temp}{Unexpanded}
-\tempa\\
-\tempb\\
+\tl_set:Nn \l_temp_tl {Unxpanded}
+\l_tempa_tl\\
+\l_tempb_tl\\
 
-% Test nine: Storage functions for int, skip and toks variables are also
-% available. Both local and global setting is possible, although there
-% are no "x" versions.
-% ----------------------------------------------------------------------
-%   12345
-%   10.00002pt
-%   abc
-% ----------------------------------------------------------------------
-\newcount\tempint
-\newskip\tempskip
-\newtoks\temptoks
-\SetModuleKeys{
-  key/.int_set:N  = \tempint,
-  key = 12345,
-  key/.skip_set:N = \tempskip,
-  key = 1 em,
-  key/.toks_set:N = \temptoks,
-  key = abc
-}
-\the\tempint\\
-\the\tempskip\\
-\the\temptoks
-
-% Test thirteen: Choices can be created either from a list of options or
+% Test nine: Choices can be created either from a list of options or
 % one by one. Both are tested here by creating a list then adding to it
 % with an extra key. Unknown choices lead to an error message.
 % ----------------------------------------------------------------------
@@ -252,7 +231,7 @@
   key = e
 }
 
-% Test fourteen: Keys can be used to set other keys.  One or more 
+% Test ten: Keys can be used to set other keys.  One or more 
 % arguments can be accepted when this happens, allowing complex key 
 % setting to be carried out easily. There are expanded versions of these
 % properties, which work similarly.
@@ -271,7 +250,7 @@
   key three = {Fred} {Ginger}
 }
 
-% Test fifteen: The .try:w and .retry:w properties attempt to set a key
+% Test eleven: The .try:w and .retry:w properties attempt to set a key
 % only if it exists.  The .try:w property does this for every key it
 % is given, whereas .retry: only works if the previous .try:w failed.
 % ----------------------------------------------------------------------
@@ -290,7 +269,7 @@
   key two/.retry:n = Seen,
 }
 
-% Test sixteen: Two programmers tools, .show_code: and .show_key:, do
+% Test twelve: Two programmers tools, .show_code: and .show_key:, do
 % pretty much what might be expected. .show_key: is mainly useful for
 % internal keys.
 % ----------------------------------------------------------------------
@@ -309,7 +288,7 @@
   key one/._num_args_tl/.show_key:,
 }
 
-% Test seventeen: A completely unknown key should cause an error.
+% Test thirteen: A completely unknown key should cause an error.
 % ----------------------------------------------------------------------
 % The key `/module name/unknown key' is unknown and is being ignored
 % ----------------------------------------------------------------------
